--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,17 +42,17 @@
         <item>Tan Malaka</item>
     </string-array>
 
-    <string-array name="movie_lenght">
-        <item>Ahmad Dahlan</item>
-        <item>Spider-Man: Into the Spider-Verse</item>
-        <item>Sutomo</item>
-        <item>Gatot Soebroto</item>
-        <item>Ki Hadjar Dewantarai</item>
-        <item>Mohammad Hatta</item>
-        <item>Soedirman</item>
-        <item>Soekarno</item>
-        <item>Soepomo</item>
-        <item>Tan Malaka</item>
+    <string-array name="movie_duration">
+        <item>105</item>
+        <item>100</item>
+        <item>140</item>
+        <item>90</item>
+        <item>120</item>
+        <item>130</item>
+        <item>75</item>
+        <item>125</item>
+        <item>100</item>
+        <item>210</item>
     </string-array>
 
     <string-array name="movie_rating">
@@ -73,18 +73,18 @@
         <item>April 25, 2018</item>
         <item>December 6, 2018</item>
         <item>December 15, 2018</item>
-        <item>Gatot Soebroto</item>
-        <item>Ki Hadjar Dewantarai</item>
-        <item>Mohammad Hatta</item>
-        <item>Soedirman</item>
-        <item>Soekarno</item>
-        <item>Soepomo</item>
-        <item>Tan Malaka</item>
+        <item>December 15, 2018</item>
+        <item>Januari 16, 2019</item>
+        <item>November 01, 2018</item>
+        <item>Mei 17, 2019</item>
+        <item>Oktober 19, 2017</item>
+        <item>Maret 10, 2019</item>
+        <item>Februari 11, 2018</item>
     </string-array>
 
 
     <string-array name="movie_genre">
-        <item>Ahmad Dahlan</item>
+        <item>Animation | Action | Adventure</item>
         <item>Spider-Man: Into the Spider-Verse</item>
         <item>Sutomo</item>
         <item>Gatot Soebroto</item>
